@@ -1,6 +1,8 @@
 CHANGELOG RoundCube Webmail
 ===========================
 
+- Set focus to editor on reply in HTML mode (#1486632)
+- Fix composing in HTML jumps cursor to body instead of recipients (#1486674)
 - Allow columns order change per user - drag&drop (#1485795)
 - Add References header in read receipt (#1486681)
 - Fix database constraint violation when opening a message (#1486696)
